Fix styling of Header on small screens
The component's content was wrapping weirdly. Fixed by making buttons
smaller and removing the "Showcase" text on small screens.

--- a/src/stories/header.css
+++ b/src/stories/header.css
@@ -19,6 +19,10 @@
   font-weight: 700;
   font-size: 20px;
   line-height: 1;
+
+  @media (max-width: 600px) {
+    display: none;
+  }
 }
 
 .storybook-header button + button {
